/******************************************************************************
 *                                                                            *
 *                    Copyright 2018 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package net;
option java_package = "com.sandpolis.core.proto.net";

import "com/sandpolis/core/proto/util/Group.proto";

/**
 * Request: Create a new group on the server
 */
message RQ_CreateGroup {
	
	// The name of the group to create
	string group_name = 1;
	
	// The username of the owner of this authentication group
	string owner = 2;
	
	// Additional members of this group
	repeated string member = 3;
	
}

/**
 * Request: Delete a group on the server
 */
message RQ_RemoveGroup {

	// The groupId of the group to remove
	int64 group_id = 1;
}

/**
 * Request: A list of groups visible to the user
 */
message RQ_ListGroups {
}

/**
 * Response: A list of groups visible to the user
 */
message RS_ListGroups {
	repeated util.GroupContainer group = 1;
}

/**
 * Request: Add an authentication mechanism to the group
 */
message RQ_AddMechanism {

	oneof mechanism {
		util.PasswordContainer password = 1;
		util.KeyContainer key = 2;
	}
}

/**
 * Request: Delete an authentication mechanism in the group
 */
message RQ_RemoveMechanism {

	// The group to modify
	int64 group_id = 1;
	
	// The authentication mechanism to remove
	int64 mech_id = 2;
}

/**
 * Request: Change the owner of the group
 */
message RQ_ChangeOwner {

	// The group to modify
	int64 group_id = 1;
	
	// The new owner of the group
	string owner = 2;
}

/**
 * Request: Add a member to a group
 */
message RQ_AddMember {

	// The group to modify
	int64 group_id = 1;
	
	// The member to add
	string member = 2;
}

/**
 * Request: Delete a member in the group
 */
message RQ_RemoveMember {

	// The group to modify
	int64 group_id = 1;
	
	// The member to delete
	string member = 2;
}